jenkins dosyasında değişiklik yapıldı